[gd_scene load_steps=10 format=2]

[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://left.png" type="Texture" id=2]
[ext_resource path="res://right.png" type="Texture" id=3]
[ext_resource path="res://Assets/Main Characters/Mask Dude/Idle (32x32).png" type="Texture" id=4]
[ext_resource path="res://Assets/Main Characters/Virtual Guy/Idle (32x32).png" type="Texture" id=5]
[ext_resource path="res://Assets/Main Characters/Pink Man/Idle (32x32).png" type="Texture" id=6]
[ext_resource path="res://ok_btn.png" type="Texture" id=7]
[ext_resource path="res://character.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="character" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.913725, 0.286275, 0.662745, 1 )

[node name="00" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -78.0
margin_right = 236.0
margin_bottom = -62.0
custom_fonts/font = SubResource( 1 )
text = "Select your character"
align = 1

[node name="left" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -20.0
margin_right = -59.0
margin_bottom = 20.0
rect_scale = Vector2( 1.1, 1.1 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.831373, 0.847059, 0.054902, 1 )
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="right" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 60.0
margin_top = -17.0
margin_right = 90.0
margin_bottom = 17.0
rect_scale = Vector2( 1.1, 1.1 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0.831373, 0.847059, 0.054902, 1 )
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Ok" type="Button" parent="."]
margin_left = 204.0
margin_top = 174.0
margin_right = 716.0
margin_bottom = 680.0
rect_scale = Vector2( 0.15, 0.15 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="sprite_list" type="Node2D" parent="."]

[node name="pink_man" type="Sprite" parent="sprite_list"]
position = Vector2( 240, 140 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
hframes = 11

[node name="mask_dude" type="Sprite" parent="sprite_list"]
visible = false
position = Vector2( 240, 144 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
hframes = 11

[node name="virtual_guy" type="Sprite" parent="sprite_list"]
visible = false
position = Vector2( 240, 144 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 5 )
hframes = 11

[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Ok" to="." method="_on_Ok_pressed"]
